<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="#c20f0f"
            android:orientation="vertical"
            android:paddingTop="19dp"
            android:paddingBottom="19dp">

            <TextView
                android:id="@+id/textRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#faf1f1"
                android:textSize="30dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:text="Extremely High Risk" />

            <TextView
                android:id="@+id/textSubRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#faf1f1"
                android:textSize="25dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:text="Possibly Unsafe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/e_coli"
                android:textColor="#555"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/layoutRisk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="5dp"
                android:background="#c20f0f"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textRisk1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#faf1f1"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage"
                    tools:text="Extremely High Risk" />

                <TextView
                    android:id="@+id/textSubRisk2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="#faf1f1"
                    android:textSize="23dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage"
                    tools:text="Possibly Unsafe" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textResult1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="> 100" />

                <TextView
                    android:id="@+id/textUnit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/mpn"
                    android:textColor="#444"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutResult2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <TextView
                android:id="@+id/textName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/total_coliform"
                android:textColor="#555"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/result_top_margin"
                    android:gravity="center_vertical"
                    android:textColor="#444"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    tools:text="> 100" />

                <TextView
                    android:id="@+id/textUnit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/mpn"
                    android:textColor="#444"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/Button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="onNextClick"
            android:text="@string/next"
            android:theme="?primaryButtonStyle" />

    </LinearLayout>
</layout>