...
    <string name="total_coliform">Total Coliform</string>
    <string name="prepare_sample">Prepare sample</string>
    <string name="cbt_compartments">CBT Compartments</string>

    <string name="read_instructions">Read Instructions</string>
    <string name="take_photo_compartments">Take a photo of the compartment bag</string>
    <string name="confidenceInterval">Upper 95&#37; Confidence Interval</string>
    <string name="confidenceIntervalTc">TC Upper 95&#37; Confidence Interval</string>
    <string name="setCompartmentColors">Set compartment colors</string>

    <string name="health_risk_category">Health Risk Category (Based on MPN and Confidence Interval)</string>
    <string name="recreational_health_risk_category">US EPA Recreational Health Risk Category Based on MPN and Upper 95&#37; Confidence Level</string>

    <string name="collect_10ml_water_sample">Collect <b>10 ml</b> water sample with Thio Bag (or bottle).</string>
    <string name="avoid_touching">Avoid touching the inside of the Thio Bag, lid or bottle.</string>
    <string name="open_growth_medium">Open growth medium sachet and add powder medium or test bud straight to the sample from the sachet</string>
    <string name="dissolve_medium_in_sample_a"><b>Powder medium:</b> Dissolve medium in sample for a few minutes. Gently swirl the bag several times until the medium is completely dissolved.</string>
...
    <string name="hours_24_30">24 – 30 hours</string>
    <string name="hours_40_48">40 – 48 hours</string>
    <string name="incubate_in_portable">Incubate in a portable incubator, preferably at 35 – 37 °C for 48 hours or put in or near another heat source.</string>
    <string name="in_addition_to_portable">In addition to portable incubators, samples can be maintained at 25°C to 44.5°C using: thermal coolers/bags; proximity to heat sources for humans and food; poultry or reptile incubator, or near refrigerator coils or room heating vents.</string>

    <string name="dissolve_medium_in_sample_tc">Dissolve medium in sample for a few minutes maximum by periodically swirling the Thio Bag</string>
    <string name="take_photo_incubated_tc">Take a photo of the incubated sample while shining with a UV light (365 nm) on the compartment bag in a dark environment.</string>
    <string name="note_total_coliform"><b>NOTE:</b> Compartments positive for E. coli are automatically also positive for Total Coliform and will be preselected in the next interface.</string>
    <string name="remember_to_shine">Remember to shine a UV light to observe the fluorescent blue colour (positive for Total Coliform).</string>
    <string name="open_growth_medium_powder">Open growth medium sachet and add powder medium straight to the sample from the sachet</string>
</resources>
