...
    <string name="required">Required</string>
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>
...
    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>

    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="warning">Warning</string>
    <string name="notFound">Not Found</string>

    <string name="instructions">Instructions</string>

    <plurals name="minutes">
...
    <!--Intro-->
    <string name="connect_with_app">Connect with Akvo Flow</string>
    <string name="a_water_quality_testing_solution">A water quality testing solution supporting over 20 parameters, like pH, E.coli or free chlorine.</string>
    <string name="test_water_quality_using">Test water quality using connected colorimetry, microbiology, sensor and strip tests.</string>
    <string name="app_is_integrated">Akvo Caddisfly is integrated with Akvo Flow, a data collection and monitoring tool.</string>
    <string name="to_conduct_a_water_quality_test">To conduct a water quality test go to Flow and select the Caddisfly question.</string>
    <string name="go_to_external_app">Go to Akvo Flow</string>
    <string name="errorAkvoFlowRequired">Please install Akvo Flow app</string>

    <!--App Update-->
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
...
